storage: improve segment file reading and implement test coverage.